--- a/src/App.css
+++ b/src/App.css
@@ -10,37 +10,26 @@
   color: white;
 }
 
-#nav {
+.nav-container {
   height: 100%;
-  width: 20%; 
+  width: 17%; 
   position: fixed; 
   z-index: 1;
   top: 0; 
   left: 0;
   background-color: #202020; 
   border: solid #303030;
-  overflow-x: hidden; 
   padding-top: 60px; /* Disable for slide in from top */
-  transition: 0.5s; 
 }
 
-#main {
+.main-container {
   height: 100%; 
-  width: 100%;
-  background-color: #272727;
+  width: 83%;
   position: fixed;
   right: 0;
-  transition: 0.5s; 
+  top: 0;
+  background-color: #272727;
   border: solid white;
   text-align: center;
 }
 
-#main.short {
-  width: 80%;
-}
-
-@media (max-width:1200px)  {
-  #nav {
-    width: 100%;
-  }
-}
