--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,24 @@
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App {
   background-color: #272727;
   color: white;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 250px auto;
+  grid-template-rows: auto;
+  grid-template-areas: 
+  "navigation main";
 }
 
 .nav-container {
-  height: 100%;
-  width: 17%; 
-  position: fixed; 
-  z-index: 1;
-  top: 0; 
-  left: 0;
+  align-self: navigation;
   background-color: #202020; 
   border: solid #303030;
-  padding-top: 60px; /* Disable for slide in from top */
 }
 
 .main-container {
-  height: 100%; 
-  width: 83%;
-  position: fixed;
-  right: 0;
-  top: 0;
+  align-self: main;
   background-color: #272727;
   text-align: center;
   padding-top: 200px;
