--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,17 +1,44 @@
-#logo {
-  border: solid gray;
-  
-}
 
 .nav {
-  text-align: center;
-  
+  height: 100%;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 28% 5% auto;
+  grid-template-areas: 
+  "picture"
+  "logo"
+  "folders";
+  user-select: none;
 }
 
-#portrait {
-  max-width: 80%;
-  height: auto;
+.portrait-container {
+  align-self: picture;
+  text-align: center;
+  padding: 30px;
+}
+
+.portrait {
+  max-width: 100%;
   border-radius: 50%;
+  border: solid white;
+}
+
+.logo-container {
+  align-self: logo;
+  text-align: center;
+}
+
+#logo {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 25px;
+}
+
+#logo:hover {
+  cursor: pointer;
+}
+
+.folder-container {
+  align-self: folders;
 }
 
 .folders {
@@ -32,7 +59,6 @@
 .folder:hover {
   background-color: #303030;
   cursor: pointer;
-  user-select: none;
 }
 
 
