--- a/src/Nav.css
+++ b/src/Nav.css
@@ -3,7 +3,7 @@
   height: 100%;
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: 28% 5% auto;
+  grid-template-rows: 250px 50px auto;
   grid-template-areas: 
   "picture"
   "logo"
@@ -65,4 +65,8 @@
 .subfolder {
   list-style-type: none;
   transition: 0.5s;
+}
+
+@media only screen and (max-width: 600px) {
+  
 }
