--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,19 @@ html, body {
   padding: 0;
   background-color: #272727;
 }
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
