--- a/src/Nav.css
+++ b/src/Nav.css
@@ -52,7 +52,7 @@
 }
 
 .folder {
-  
+  cursor: pointer;
   padding: 3px;
 }
 
@@ -61,12 +61,9 @@
   cursor: pointer;
 }
 
-
 .subfolder {
   list-style-type: none;
   transition: 0.5s;
-}
-
-@media only screen and (max-width: 600px) {
-  
+  cursor: pointer;
+  margin: auto;
 }
