adds contact page icons

--- a/src/App.css
+++ b/src/App.css
@@ -22,12 +22,14 @@
   align-self: navigation;
   background-color: #202020; 
   border-right: solid #353535 1px;
+  overflow-y: hidden;
 }
 
 .main-container {
   padding: 16px;
   align-self: home;
   background-color: #272727;
+  overflow-y: auto;
 }
 
 .nav-toggle {
