--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -27,12 +27,7 @@
     border-radius: 100px;
 }
 
-#name {
-    font-size: 120%;
-    color: #9282F5;
-}
-
-#occupation {
+.emphasis {
     font-size: 120%;
     color: #9282F5;
 }
