--- a/src/components/Connect.css
+++ b/src/components/Connect.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 .connect {
-    width: 100%;
+    margin: auto;
     height: 100%;
     display: grid;
     grid-template-columns: auto;
@@ -10,22 +10,22 @@
     "header"
     "contact-info";
     font-family: 'Poppins';
-    padding: 20px; 
+    padding: 20px;
 }
 
 .connect-header {
-    justify-self: header;
+    grid-area: header;
 }
 
 .connect-info-container {
-    justify-self: contact-info;
+    grid-area: contact-info;
 }
 
 .info-block-container {
     margin: auto;
     height: 60%;
-    padding-right: 18%;
-    padding-left: 18%;
+    padding-right: 10%;
+    padding-left: 10%;
     display: grid;
     grid-template-columns: auto auto auto;
     grid-template-rows: auto auto;
@@ -44,30 +44,55 @@
     border: solid #353535 2px;
     border-radius: 20px;
     text-align: center;
-    width: 160px;
-    height: 120px;
+    width: 240px;
+    height: 140px;
+    font-family: 'Poppins';
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 40% 30% 30%;
+    grid-template-areas: 
+    "icon"
+    "type"
+    "description";
+}
+
+.icon-container {
+    grid-area: icon;
+    padding: 10px;
+}
+
+.type-container {
+    grid-area: type;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.description-container {
+    grid-area: description;
+    font-weight: 300;
+    color: white;
 }
 
 #email-info {
-    justify-self: email;
+    grid-area: email;
 }
 
 #location-info {
-    justify-self: location;
+    grid-area: location;
 }
 
 #phone-info {
-    justify-self: phone;
+    grid-area: phone;
 }
 
 #linkedin-info {
-    justify-self: linkedin;
+    grid-area: linkedin;
 }
 
 #website-info {
-    justify-self: website;
+    grid-area: website;
 }
 
 #github-info {
-    justify-self: github;
+    grid-area: github;
 }
