--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,77 +1,99 @@
+@import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 .nav {
   height: 100%;
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: 250px 50px auto;
+  grid-template-rows: 240px 80px 300px;
   grid-template-areas: 
   "picture"
   "logo"
-  "folders";
+  "links";
   user-select: none;
 }
 
 .portrait-container {
-  align-self: picture;
+  grid-area: picture;
   text-align: center;
-  padding: 30px;
+  padding-top: 20px;
 }
 
 .portrait {
-  max-width: 100%;
+  margin: auto;
+  max-width: 80%;
   border-radius: 50%;
-  border: solid white;
+
+  animation: border-pulse 3s infinite;
 }
 
 .logo-container {
-  align-self: logo;
+  grid-area: logo;
+  font-family: 'Poppins';
   text-align: center;
 }
 
 #logo {
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 25px;
+  font-family: 'Poppins';
+  font-weight: 500;
+  font-size: 28px;
 }
 
 #logo:hover {
   cursor: pointer;
 }
 
-.folder-container {
-  align-self: folders;
+.nav-link:link {
+  text-decoration: none;
 }
 
-.folders {
+.nav-link:visited {
+  text-decoration: none;
+}
+
+.nav-link:active {
+  text-decoration: none;
+}
+
+.nav-link {
+  font-family: 'Poppins';
+  font-weight: 500;
+  width: 40%;
   margin: auto;
-  width: 200px;
-  list-style-type: '>';
-  list-style-position: inside;
-  text-align: left;
-  padding: 3px;
-  font-family: Cascadia Code thin;
+  color: #DDDDDD;
+  transition: 0.3s;
+  border-bottom: 2px solid #999999;
 }
 
-.folder {
-  cursor: pointer;
-  padding: 3px;
+.nav-link:hover {
+  font-weight: 600;
+  width: 60%;
+  transition: 0.3s;
 }
 
-.folder:hover {
-  background-color: #303030;
-  cursor: pointer;
+.panel {
+  color: white;
+  text-align: center;
 }
 
-.subfolder {
-  list-style-type: none;
-  transition: 0.5s;
-  cursor: pointer;
-  padding-left: 30px;
-}
-
-.page-link {
+.panel-container {
+  grid-area: links;
+  padding: 30px;
+  display: grid;
   color: white;
 }
 
-.page-link:hover {
-  background-color: #303030;
+.status {
+  color: #999999;
+}
+
+#offline-orb {
+  width: 10px;
+  background-color: #999999;
+  border-radius: 25%;
+}
+
+@keyframes border-pulse {
+  50% {
+    border-color: rgba(32, 32, 32, 0);
+  }
 }
