--- a/src/components/About.css
+++ b/src/components/About.css
@@ -6,12 +6,12 @@
     padding-left: 10%;
     padding-right: 10%;
     display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 100px auto auto;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto auto auto ;
     grid-template-areas: 
-    "header"
-    "work"
-    "education";
+    "header header"
+    "intro intro"
+    "work education";
     grid-row-gap: 20px;
     font-family: 'Poppins';
 }
@@ -20,220 +20,21 @@
     grid-area: header;
 }
 
-.education-container {
-    grid-area: education;
-    
-}
-
-.education-grid-container {
-    display: grid;
-    grid-template-columns: 150px auto;
-    grid-template-rows: auto auto;
-    grid-template-areas: 
-    "logo info"
-    "classes classes";
-    background-color: #303030;
-    border: solid #505050;
-    border-radius: 20px;
-    padding: 20px;
-}
-
-.about-tab-header {
-    width: 100px;
-    position: relative;
-    left: 20px;
-    text-align: center;
-    background-color: #313131;
-    border-top: solid #404040;
-    border-left: solid #404040;
-    border-right: solid #404040;
-    border-radius: 10px 10px 0px 0px;
-    color: #9282F5;
-    cursor: pointer;
-    user-select: none;
-}
-
-.education-logo-container {
-    grid-area: logo;
-    padding-top: 10px;
-}
-
-.education-info {
-    grid-area: info;
-}
-
-.education-classes {
-    grid-area: classes;
+.intro-container {
+    grid-area: intro;
 }
 
 .work-container {
     grid-area: work;
+    border: solid white;
 }
 
-#umich-logo {
-    width: 140px;
-    height: auto;
+.education-container {
+    grid-area: education;
+    border: solid white;
 }
 
-.bigger {
-    font-size: 120%;
+.timeline-container {
+    background-color: gray;
 }
 
-#classes {
-    padding: 0;
-}
-
-.class {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
-    grid-template-areas: 
-    "class"
-    "desc"
-    "projects";
-    margin: 0;
-}
-
-.class-name {
-    grid-area: class;
-    padding-left: 10px;
-    font-size: 18px;
-    font-weight: 400;
-    border-radius: 10px;
-    user-select: none;
-    display: grid;
-    grid-template-columns: auto 50% 12%;
-    grid-template-rows: auto;
-    grid-template-areas: "name number date";
-}
-
-.class-name:hover {
-    background-color: #282828;
-    cursor: pointer;
-}
-
-.class-name-name {
-    grid-area: name;
-}
-
-.class-name-number {
-    grid-area: number;
-    color: #555555;
-    font-weight: 300;
-    margin-left: 0;
-}
-
-.class-name-date {
-    grid-area: date;
-    color: #9282F5;
-    font-size: 100%;
-    font-weight: 300;
-    margin: auto;
-}
-
-.class-desc {
-    grid-area: desc;
-    padding-left: 5%;
-    font-size: 16px;
-    color: #AAAAAA;
-}
-
-.class-projects {
-    grid-area: projects;
-    padding: 10px;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-.class-project {
-    width: 150px;
-    height: 100px;
-    padding: 10px;
-    margin-bottom: 10px;
-    text-align: center;
-    color: #9282F5;
-    border: solid #505050;
-    border-radius: 16px;
-    transition: 1s;
-}
-
-.info-date {
-    display: grid;
-    grid-template-columns: auto 20%;
-    grid-template-rows: auto;
-    grid-template-areas: 
-    "info date";
-}
-
-.info-container {
-    grid-area: info;
-}
-
-.date-container {
-    grid-area: date;
-    color: #9282F5;
-    font-size: 100%;
-    font-weight: 300;
-    margin: auto;
-}
-
-#uofm {
-    font-size: 30px;
-    font-weight: 600;
-}
-
-.work-experiences {
-    display: grid;
-    padding: 20px;
-    background-color: #303030;
-    border: solid #505050;
-    border-radius: 20px;
-}
-
-.work-position {
-    display: grid;
-    grid-template-columns: 200px auto;
-    grid-template-rows: auto;
-    grid-template-areas: 
-    "logo title";
-}
-
-.position-logo {
-    grid-area: logo;
-    width: 200px;
-    height: auto;
-}
-
-.position-title {
-    grid-area: title;
-    display: grid;
-    grid-template-columns: auto 200px;
-    grid-template-rows: auto;
-    grid-template-areas: "title date";
-    padding: 12px;
-}
-
-.position-title-info {
-    grid-area: title;
-}
-
-.position-title-date {
-    grid-area: date;
-    color: #9282F5;
-}
-
-.position-title-company {
-    font-size: 30px;
-    font-weight: 500;
-}
-
-#ford-logo {
-    width: 200px;
-    height: auto;
-}
-
-#UMMed-logo {
-    width: 200px;
-    height: auto;
-}
