--- a/src/components/About.css
+++ b/src/components/About.css
@@ -3,15 +3,15 @@
 .about {
     margin: auto;
     height: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 6%;
+    padding-right: 6%;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto auto auto ;
     grid-template-areas: 
     "header header"
     "intro intro"
-    "work education";
+    "education work";
     grid-row-gap: 20px;
     font-family: 'Poppins';
 }
@@ -24,17 +24,81 @@
     grid-area: intro;
 }
 
-.work-container {
+#work-container {
     grid-area: work;
-    border: solid white;
+    padding: 20px;
 }
 
-.education-container {
+#education-container {
     grid-area: education;
-    border: solid white;
+    padding: 20px;
 }
 
 .timeline-container {
-    background-color: gray;
+    height: auto;
+    border-radius: 20px;
+    background-color: #333333;
+    border: solid #888888;
 }
 
+.timeline-dot {
+    width: 12px;
+    height: 12px;
+    border-radius: 12px;
+    border: solid #9282F5;
+    background-color: #9282F5;;
+    margin: auto;
+}
+
+.timeline-line {
+    width: 2px;
+    margin: auto;
+    background-color: #9282F5;
+}
+
+.timeline-template {
+    display: grid;
+    grid-template-columns: 15% auto;
+    grid-template-rows: auto auto auto auto;
+    grid-template-areas: 
+    "timeline date"
+    "timeline school"
+    "timeline title"
+    "timeline courses";
+    padding-bottom: 20px;
+}
+
+.timeline {
+    grid-area: timeline;
+    padding-top: 16px;
+}
+
+.degree-date {
+    grid-area: date;
+    padding-top: 10px;
+    color: #CCCCCC;
+}
+
+.degree-school {
+    grid-area: school;
+    padding-top: 10px;
+    font-weight: 1000;
+    color: #9282F5;
+}
+
+.degree-title {
+    grid-area: title;
+    padding-top: 10px;
+    font-weight: 600;
+}
+
+.degree-courses {
+    grid-area: courses;
+    padding-top: 10px;
+}
+
+.outside-list {
+    list-style-position: inside;
+    margin: 0;
+    padding: 0;
+}
