--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -11,7 +11,7 @@
     grid-template-areas: 
     "header"
     "projects";
-    font-family: 'Poppins';
+    font-family: 'consolas';
 }
 
 .header-container {
@@ -33,7 +33,7 @@
 
 .project {
     border-radius: 10px;
-    background-color: #2F2F2F;
+    background-color: rgb(238, 238, 238);
     border: solid 1px #666666;
     margin: auto;
     padding: 10px;
