--- a/src/components/About.css
+++ b/src/components/About.css
@@ -14,7 +14,7 @@
     "education"
     "work";
     grid-row-gap: 20px;
-    font-family: 'Poppins';
+    font-family: 'consolas';
 }
 
 .about-header-container {
