--- a/src/components/Bonus.css
+++ b/src/components/Bonus.css
@@ -25,9 +25,10 @@
 }
 
 .bonus {
-    padding: 20px;
+    padding: 15px;
     margin: 10px;
     width: 300px;
+    height: 100%;
     background-color: rgb(238, 238, 238);
     border-radius: 20px;
     border: solid #353535 1px;
