making it more mobile friendly

--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,10 @@
   height: 95vh;
   display: grid;
   grid-template-columns: 260px auto;
-  grid-template-rows: auto;
+  grid-template-rows: 800px auto;
   grid-template-areas: 
-  "navigation home";
+  "navigation home"
+  "spacer home";
   padding: 1%;
   transition: 500ms;
 }
@@ -24,12 +25,14 @@
   border: solid #353535 1px;
   border-radius: 64px;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .main-container {
   padding: 16px;
   grid-area: home;
   background-color: white;
+  overflow-x: auto;
   overflow-y: auto;
 }
 
