--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 .nav {
-  height: 100%;
+  height: auto;
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: 240px 400px auto;
