--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,36 +1,79 @@
 @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
-.home {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: auto;
-    grid-template-areas: 
-    "intro monologue";
-    padding-top: 8%;
-    padding-left: 6%;
-    padding-right: 6%;
-    font-family: 'Consolas';
-    justify-content: space-around;
+.main-container {
+    margin: 0px;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    font-family: Helvetica;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.nav {
+    color: white;
+    padding: 1vw;
+    background-color: rgb(30, 30, 35);
+    width: 100vw;
+    position: static;
+    top: 0;
+    z-index: 1;
+}
+
+.nav-title {
+    font-size: x-large;
+    font-weight: 600;
+}
+
+.page {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    flex-direction: column;
+    color: black;
+    perspective: 1px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.pan {
+    width: 100vw;
+    height: auto; 
+    border-bottom: solid 1px gray;
+    grid-area: bkgd;
 }
 
 .introduction {
-    grid-area: intro;
-    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.small-talk {
-    grid-area: monologue;
+.img-container {
+    grid-area: pic;
+    width: auto;
+    height: auto;
+    position: relative;
+    top: -20vh;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.rotating-label {
-    padding: 6px;
-    font-size: 120%;
-    color: white;
-    border-radius: 20px;
-    background-color: #9282F5;
-    box-shadow: 1px 1px 1px gray;
+.introduction-text {
+    grid-area: words;
+    margin: auto;
+    background-color: gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-li:not(:last-child) {
-    margin-bottom: 10px;
+.introduction-image {
+    width: 400px;
+    height: auto;
+    border-radius: 10vh;
+}
+
+.large {
+    font-size: x-large;
 }
