--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,21 +7,46 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.nav {
+  color: #ffffff;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+li {
+  font-size: 14px;
+  margin-left: 10px;
+  list-style-type: disc;
+}
+
+.hide-on-tablet {
+  display: inline;
+}
+
+@media (max-width: 1355px) {
+  .hide-on-tablet {
+    display: none;
+  }
+}
+
+.contact-button {
+  border: solid 1px black;
+  border-radius: 6px;
+  box-shadow: #555555 2px 2px;
+  padding: 3px;
+  cursor: pointer;;
+}
+
+.below-intro {
+  background-color: #f3f3f3;
 }
